# automated-application-screenshots

./: .gitignore  CLAUDE.md  README.md  install.bat  languages.json  list_supported_languages.bat  pyproject.toml  start.bat
config/: keyboard-layout-watcher.json
docs/: AUTOMATION_INTERFACE.md  COMMAND_LINE_ARGUMENTS.md  CONFIG.md
screenshot_tool/: __init__.py  app_logger.py  automation.py  capture.py  cli.py  config.py  demo_cli.py  demo_server.py  dropdown_reader.py  exporter.py  main.py  recorder.py  window_finder.py
tests/integration/: test_cli_smoke.py  test_demo_server.py
tests/unit/: test_capture_save.py  test_config.py  test_demo_cli.py  test_demo_config.py  test_exporter.py  test_protocol.py  test_window_finder.py
tools/: run_integration_tests.bat  run_tests.bat
