[project]
name = "screenshot-tool"
version = "1.0.0"
description = "Automated multi-language GUI screenshot capture tool"
requires-python = ">=3.10"
dependencies = [
    "pywin32>=305",
    "pillow>=10.0.0",
    "psutil>=5.9.0",
    "pyautogui>=0.9.54",
    "keyboard>=0.13.5",
    "pywinauto>=0.6.8",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
]

[project.scripts]
screenshot-tool = "screenshot_tool.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
